--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pillow
-google
-google-generativeai
-langchain_google_genai
-langchain_core
-langchain
+pillow==10.2.0
+google==3.0.0
+google-generativeai==0.3.2
+langchain_google_genai==0.0.9
+langchain_core==0.1.26
